카테고리 메모 화면에서 지나간 메모를 확인할 수 있음
중복되는 레이아웃을 분리

앱 타이틀을 제외한 사용되는 폰트를 scdream로 통일

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:theme="@style/popupTheme" />
 
         <activity
-            android:name="com.project.memowithnfc.MemoWriteActivity"
+            android:name="com.project.memowithnfc.WriteMemoActivity"
             android:windowSoftInputMode="adjustResize" />
 
         <activity android:name="com.project.memowithnfc.MainActivity">
