NFC에 저장될 데이터를 카테고리 고유 아이디에서 카테고리 이름으로 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:theme="@style/popupTheme">
         </activity>
 
-        <activity android:name="com.project.memowithnfc.CategoryMemoActivity">
+        <activity android:name="com.project.memowithnfc.CategoryMemoActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
