카테고리별 메모 화면의 지나간 메모를 bottom sheet로 변경 그에 따라 레이아웃 분할

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,7 @@
         <activity
             android:name="com.project.memowithnfc.WholeMemoActivity"
             android:windowSoftInputMode="adjustResize"
-            android:parentActivityName="com.project.memowithnfc.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.project.memowithnfc.MainActivity" />
+            android:parentActivityName=".MainActivity">
         </activity>
 
         <activity
