--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
@@ -32,8 +34,9 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    //implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.0'
-    //implementation 'com.applandeo:material-calendar-view:1.5.1'
-    //implementation 'sun.bob:mcalendarview:1.0.0'
+}
+repositories {
+    mavenCentral()
 }
